Github issue#980, Can't create a new account "Unexpected end of JSON input" error displayed Better line spacing for error block

--- a/app/styles/tc-ui.scss
+++ b/app/styles/tc-ui.scss
@@ -332,6 +332,7 @@
     border: 1px solid $tc-red-30;
     font-style: italic;
     font-size: 13px;
+    line-height: 15px;
     color: $tc-red;
   }
 
